# openfst-android

./: README.md  build.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/androidTest/java/cn/pengzhendong/openfst/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/patch/: configure.ac
app/src/main/java/cn/pengzhendong/openfst/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/pengzhendong/openfst/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
